...
        self.backgroundColor = UIColor(named: "YPBlack")
        self.selectionStyle = .none
        
        cellLikeButton.addTarget(self,
                                 action: #selector(likeButtonDidTap),
                                 for: .touchUpInside)
        cellLikeButton.accessibilityIdentifier = "like button"
        
        cellLabel.textColor = UIColor(named: "YPWhite")
        cellLabel.font = UIFont.boldSystemFont(ofSize: 13)
        
        cellImageView.layer.cornerRadius = 16
        cellImageView.layer.masksToBounds = true
...
