...
        let backButton = UIButton(type: .custom)
        backButton.setImage(UIImage(named: "Backward_black"),
                            for: .normal)
        backButton.addTarget(self, action: #selector(Self.backButtonDidTap),
                             for: .touchUpInside)
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        view.backgroundColor = UIColor(named: "YPWhite")
        view.addSubview(progressView)
        view.addSubview(webView)
        view.addSubview(backButton)
        
...
