...
        logInButton.setTitleColor(UIColor(named: "YPBlack"),
                                  for: .normal)
        logInButton.backgroundColor = UIColor(named: "YPWhite")
        logInButton.addTarget(self, action: #selector(Self.logInButtonDidTap),
                              for: .touchUpInside)
        logInButton.layer.cornerRadius = 16
        logInButton.accessibilityIdentifier = "Authenticate"
        
        view.addSubview(imageView)
        view.addSubview(logInButton)
        
        imageView.translatesAutoresizingMaskIntoConstraints = false
        logInButton.translatesAutoresizingMaskIntoConstraints = false
...
